# markdown-preprocessor

./: .pylintrc  README.md  pyproject.toml
md_preprocessor/bibliography/: citations.py  main.py  utils.py
md_preprocessor/bibliography/assets/templates/: bibliography.j2  citation.j2
md_preprocessor/utils/: replace.py
tests/: utils.py
tests/test_bibliography/: test_citations.py  test_utils.py
tests/test_bibliography/fixtures/: bibliography.json
tests/test_bibliography/fixtures/templates/: bibliography.j2  citation.j2
tests/test_utils/: test_replace.py
tests/test_utils/fixtures/examples/: citation_document1.md  citation_document1_expected.md
